# fastapi_boilerplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: auth.py  main_router.py
